feat(docker): Enable hot-reload for Nuxt.js frontend - Mounted frontend code as Docker volume for auto-sync - Configured Nuxt.js dev mode with HMR - Added usePolling for Vite in Docker - Excluded node_modules volume for performance - Updated docker-compose for live frontend updates

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,8 +29,8 @@ services:
     ports:
       - "3000:3000"  # Porta externa 3000 para o frontend Nuxt.js
     volumes:
-      - ./frontend:/app
-      - /app/node_modules
+      - ./frontend:/app  # Monta o volume do código fonte do frontend
+      - /app/node_modules  # Evita sincronizar node_modules entre host e container
     command: npm run dev
     environment:
       - HOST=0.0.0.0
