--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "nuxt": "^3.14.159",
-    "vue": "latest",
+    "vue": "^3.5.12",
     "vue-router": "latest"
   }
 }
