--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,13 +5,25 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
+    "test": "jest --config jest.config.cjs",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
     "nuxt": "^3.14.159",
-    "vue": "^3.5.12",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@vue/test-utils": "^2.4.0-alpha.2",
+    "@vue/vue3-jest": "^29.2.6",
+    "babel-jest": "^29.7.0",
+    "cypress": "^13.15.2",
+    "jest": "^29.0.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "supertest": "^7.0.0",
+    "vue": "^3.5.12"
   }
 }
